hw4/k8s/depl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-fflag
  labels:
    app: frontend
    version: fflag
    project: istio-course
  namespace: istio-course
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: fflag
      project: istio-course
  template:
    metadata:
      labels:
        app: frontend
        version: fflag
        project: istio-course
    spec:
      serviceAccountName: servicemesh-frontend
      containers:
        - name: frontend
          image: kreyyser/frontend-service:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: "/live"
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/ready"
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "500M"
              cpu: "0.15"
            limits:
              memory: "1500M"
              cpu: "0.75"
