hw4/k8s/dr.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authors
  namespace: istio-course
spec:
  host: authors
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: fflag
    labels:
      version: fflag
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: books
  namespace: istio-course
spec:
  host: books
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: fflag
    labels:
      version: fflag
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
  namespace: istio-course
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: fflag
    labels:
      version: fflag
---
