hw4/k8s/vs-delay.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors-fflag
  namespace: istio-course
spec:
  hosts:
  - authors
  http:
  - match:
    - headers:
        developer:
          exact: kreyser
    route:
    - destination:
        host: authors
        subset: fflag
  - fault:
      delay:
        percentage: 
          value: 50
        fixedDelay: 40s
    route:
      - destination:
          host: authors
          subset: v1
        weight: 50
      - destination:
          host: authors
          subset: v2
        weight: 50
